Добавили слово ПОКА

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="" />
 	</head>
 	<body>
-		<h1>Привет</h1>
+		<h1>ПОКА</h1>
 		<b><big>Этот сайт создан как тестовая стр.</big></b>
 		<ol type="A">
 			<li>Надо попросить Никиту проверить</li>
