--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 					<td>Kazantseva</td>
 				</tr>
 				<tr>
+					<td>Vyacheslav</td>
+					<td>Kazantsev</td>
+				</tr>
+				<tr>
 					<td>Nikita</td>
 					<td>Kazantsev</td>
 				</tr>
