--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
 				</tr>
 			</tfoot>
 		</table>
+		<details>
+			<summary>Community Rules</summary>
+			1: Do not use profanity 2: Respect the community 3: go to this site:
+		</details>
+		<br />
+		<a
+			>https://www.youtube.com/watch?v=IDSZ_ReTSxU&pp=ygVG0LTQvtCx0YDQviDQv9C-0LbQsNC70L7QstCw0YLRjCDQvdCwINGB0LXRgNCy0LXRgCDRiNC40LfQvtGE0YDQtdC90LjRjw%3D%3D</a
+		>
 		<p>if you want to get here enter your name, and your last name</p>
 		<label></label>
 		<input type="text" placeholder="Write Your Name Here" maxlength="20" />
@@ -75,12 +83,19 @@
 			placeholder="Write Your Last Name Here"
 			maxlength="20"
 		/><br /><br />
-		<p>what is your gender?</p>
-		<label>Male</label>
-		<input type="radio" name="state" />
-		<p></p>
-		<label>female</label>
-		<input type="radio" name="state" />
+
+		<form>
+			<p>what is your gender?</p>
+			<select>
+				<option>male</option>
+				<option>female</option>
+			</select>
+			<br /><br />
+			<p>write your bio so we know who wants to join our community</p>
+			<textarea></textarea>
+			<br /><br />
+			<button>That's ready!</button>
+		</form>
 		<br />
 		<hr />
 	</body>
@@ -99,3 +114,9 @@
 <!--link позволяет перенаправлять файлы CSS в HTML надо прописывать href, прописывать только в теге head-->
 <!--script для Java можно прописывать как в head так и в body. ВНИМАНИЕ если надо прописать файл то используй src!!!-->
 <!--<label></label>-->
+<!--<label>Male</label>
+		<input type="radio" name="state" />
+		<p></p>
+		<label>female</label>
+		<input type="radio" name="state" />-->
+<!--важный урок 16-->
