added video rules

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 		</details>
 		<br />
 		<a
-			>https://www.youtube.com/watch?v=IDSZ_ReTSxU&pp=ygVG0LTQvtCx0YDQviDQv9C-0LbQsNC70L7QstCw0YLRjCDQvdCwINGB0LXRgNCy0LXRgCDRiNC40LfQvtGE0YDQtdC90LjRjw%3D%3D</a
+			href="https://www.youtube.com/watch?v=IDSZ_ReTSxU&pp=ygVG0LTQvtCx0YDQviDQv9C-0LbQsNC70L7QstCw0YLRjCDQvdCwINGB0LXRgNCy0LXRgCDRiNC40LfQvtGE0YDQtdC90LjRjw%3D%3D"
+			target="_blank"
+			>rules</a
 		>
 		<p>if you want to get here enter your name, and your last name</p>
 		<label></label>
